// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App curl 1`] = `
Object {
  "data": Object {
    "data": "hi",
  },
  "status": 200,
}
`;

exports[`App post body 1`] = `
Object {
  "data": Object {
    "data": "hi",
  },
  "status": 200,
}
`;

exports[`App validate 400 1`] = `
Object {
  "data": Object {
    "data": "100",
  },
  "status": 200,
}
`;
